--- a/第二章 營運計畫.md
+++ b/第二章 營運計畫.md
@@ -9,7 +9,11 @@
 |      | 是否有正確的技術知識來完成專案目標    |   是   |
 | 財務 | 是否能帶來收益                     |   是   |
 | 營運 | 是否有符合法律規範                  |   是   |
+
+## 2-2 商業模式－Business model
+![圖 2-1-1 商業模式圖](./images/CH2/圖2-1-1商業模式圖.jpg)
 <br>
+圖 2-1-1 商業模式圖
 
 ## 2-3 市場分析－STP
  1.	市場區隔：
@@ -40,7 +44,6 @@
 (2)	以集點的方式提供優惠給學生或教職員
 (3)	提供學生或教職員快速且方便的訂餐選擇
 (4)	提供捐款功能，與公益連結
-<br>
 
 ## 2-4 競爭力分析SWOT-TOWS或五力分析
 1.	優勢：
@@ -62,5 +65,4 @@
 (1)	線上點餐系統日益增加
 (2)	系統故障
 (3)	網路不穩定導致無法即時更新資訊
-<br>
 
